--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -519,7 +519,7 @@ dialog.already_running.start_button=Start geforceerd
 #orig#dialog.already_running.title=Already running
 dialog.already_running.title=al gestart
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
-dialog.already_running.warning=PowerFolder is al gestart\n\nHint\: Als u PowerFolder opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
+dialog.already_running.warning={APPNAME} is al gestart\n\nHint\: Als u {APPNAME} opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
 ##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
@@ -621,7 +621,7 @@ dialog.synchronization.sychronizing=Synchronizeren...
 #orig#dialog.unable_to_connect_to_member=Unable to connect to {0}
 dialog.unable_to_connect_to_member=Kan niet verbinden met {0}
 #orig#dialog.unable_to_open_port=Unable to open on local port {0}, maybe {APPNAME} is already running
-dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is misschien al gestart?
+dialog.unable_to_open_port=Kan lokale poort {0} niet openen, {APPNAME} is misschien al gestart?
 ##dialog.update.updating={APPNAME} is updating
 ##dialog.update.updating.text=Downloading version {0} of {APPNAME}.
 ##dialog.update_check.downloadAndUpdate=Download and update now
@@ -880,15 +880,15 @@ folder_panel.settings_tab.removebutton.name=Verwijder
 ##format.one_minute=1 minute
 
 #orig#free_limit_dialog.buy_pro=Buy {APPNAME} now
-free_limit_dialog.buy_pro=Koop PowerFolder Pro
+free_limit_dialog.buy_pro=Koop {APPNAME}
 #orig#free_limit_dialog.buy_recommendation=It is required that you upgrade to get more usage.
 free_limit_dialog.buy_recommendation=Het is It is vereist dat u de Pro versie koopt of uw gebruikt verminderd.
 #orig#free_limit_dialog.buy_recommendation2={APPNAME} is currently disabled until you take action.
-free_limit_dialog.buy_recommendation2=PowerFolder is momenteel uitgeschakeld totdat u actie onderneemt.
+free_limit_dialog.buy_recommendation2={APPNAME} is momenteel uitgeschakeld totdat u actie onderneemt.
 #orig#free_limit_dialog.buy_recommendation3=Upgrade {APPNAME} now
-free_limit_dialog.buy_recommendation3=Ondersteun ons door PowerFolder Pro aan te schaffen\!
+free_limit_dialog.buy_recommendation3=Ondersteun ons door {APPNAME} aan te schaffen\!
 #orig#free_limit_dialog.heavy_usage_detected={APPNAME} has detected that you are extensively using it.
-free_limit_dialog.heavy_usage_detected=PowerFolder heeft gedetecteerd dat u het programma intensief gebruikt.
+free_limit_dialog.heavy_usage_detected={APPNAME} heeft gedetecteerd dat u het programma intensief gebruikt.
 #orig#free_limit_dialog.reason=Only {1} GBs data and {0} folders allowed.
 free_limit_dialog.reason=Reden\: Meer dan {0} folders or of meer dan {1} GBs aan bestanden ingesteld.
 #orig#free_limit_dialog.reduce=Reduce usage
@@ -896,7 +896,7 @@ free_limit_dialog.reduce=Verminder gebruik
 #orig#free_limit_dialog.title=Extensive use detected
 free_limit_dialog.title=Intensief gebruikt gedetecteerd
 #orig#free_limit_dialog.whatispro=Why should I upgrade {APPNAME}?
-free_limit_dialog.whatispro=Waarom zou ik naar PowerFolder Pro upgraden?
+free_limit_dialog.whatispro=Waarom zou ik naar {APPNAME} upgraden?
 
 ##friend.search.personal.message.text=You may include a message
 ##friend.search.personal.message.text2=You may include a message for {0}
@@ -1015,12 +1015,12 @@ general.yesterday=gisteren
 ##invitation.utils.unable.write.title=Unable to write invitation
 
 #orig#invitation_files.description={APPNAME} invitations
-invitation_files.description=PowerFolder uitnodigingen
+invitation_files.description={APPNAME} uitnodigingen
 
 #orig#limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.dont_autodetect=Stop met detecteren van gelimiteerde verbinding
 #orig#limited_connection.text={APPNAME} has detected limited connectivity to the network.\nThis may caused by a firewall or router.\nFind out how to improve your connectivity here\:\n{0}
-limited_connection.text=PowerFolder heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
+#limited_connection.text={APPNAME} heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
 #orig#limited_connection.title=Limited connectivity
 limited_connection.title=Beperkte connectie
 
@@ -1204,7 +1204,7 @@ plugin_enable.name=Start
 #orig#preferences.dialog.advPort=Port
 preferences.dialog.advPort=Poort
 #orig#preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports {APPNAME} should listen for connections on
-preferences.dialog.advPort.tooltip=Geef een komma (",") -gescheiden lijst van poorten waarop PowerFolder moet luisteren voor inkomende verbindingen
+preferences.dialog.advPort.tooltip=Geef een komma (",") -gescheiden lijst van poorten waarop {APPNAME} moet luisteren voor inkomende verbindingen
 ##preferences.dialog.archive_cleanup=Cleanup
 ##preferences.dialog.archive_cleanup_day=1 day
 ##preferences.dialog.archive_cleanup_month=1 month
@@ -1221,7 +1221,7 @@ preferences.dialog.bind=Interface adres
 #orig#preferences.dialog.bind.any=Any
 preferences.dialog.bind.any=Alle
 #orig#preferences.dialog.bind.tooltip=Select the address {APPNAME} should use
-preferences.dialog.bind.tooltip=Selecteer het adres die PowerFolder moet gebruiken
+preferences.dialog.bind.tooltip=Selecteer het adres die {APPNAME} moet gebruiken
 ##preferences.dialog.bindDescr=Interface description
 ##preferences.dialog.default_archive_mode.text=Default archive mode
 ##preferences.dialog.delta_sync=Delta sync
@@ -1230,7 +1230,7 @@ preferences.dialog.bind.tooltip=Selecteer het adres die PowerFolder moet gebruik
 #orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
-preferences.dialog.dialogs.check_for_program_updates=Check voor PowerFolder programma updates
+preferences.dialog.dialogs.check_for_program_updates=Check voor {APPNAME} programma updates
 ##preferences.dialog.dialogs.create_powerfolders_shotrcut=Create desktop shortcut
 ##preferences.dialog.dialogs.notification.preview.text=This is a preview of a notification
 ##preferences.dialog.dialogs.notification.preview.title=Preview
@@ -1312,11 +1312,11 @@ preferences.dialog.line_settings=Internet verbindings snelheid
 #orig#preferences.dialog.network.title=Network
 preferences.dialog.network.title=Netwerk
 #orig#preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to clients in the Local Area Network.<BR>The only connection out will be to the update server.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>That is used to detect the other clients in your LAN.</BODY></HTML>
-preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Verbind alleen met {APPNAME} programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere {APPNAME} programma's in uw LAN te detecteren.</BODY></HTML>
 #orig#preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.name=Verbind met
 #orig#preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to invitees, LAN computers and people who are in joined folders.<BR>{APPNAME} also connects to supernodes to find your invitees via the Internet.</BODY></HTML>
-preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Maakt het verzenden van bestanden over LAN en Internet mogelijk.<BR>Verbind alleen met vrienden, bebruikers op het LAN en gebruikers die lid zijn van de Folder<BR>Verer verbind PowerFolder naar supernodes om het mogelijk te maken vrienden te vinden op het Internet.</BODY></HTML>
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Maakt het verzenden van bestanden over LAN en Internet mogelijk.<BR>Verbind alleen met vrienden, bebruikers op het LAN en gebruikers die lid zijn van de Folder<BR>Verer verbind {APPNAME} naar supernodes om het mogelijk te maken vrienden te vinden op het Internet.</BODY></HTML>
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
 preferences.dialog.nickname=Naam
@@ -1327,7 +1327,7 @@ preferences.dialog.non_windows_info=Attentie, sommige instellingen zijn alleen b
 #orig#preferences.dialog.open_port=Automatically open Windows Firewall
 preferences.dialog.open_port=Open de Windows Firewall automatisch
 #orig#preferences.dialog.open_port.tooltip=Opens the {APPNAME} port on the Windows Firewall
-preferences.dialog.open_port.tooltip=Opent de PowerFolder poort in de Windows Firewall
+preferences.dialog.open_port.tooltip=Opent de {APPNAME} poort in de Windows Firewall
 #orig#preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.class_name=Java classname
 #orig#preferences.dialog.plugin.description=Description
@@ -1344,7 +1344,7 @@ preferences.dialog.plugin.status_enabled=InActief
 #orig#preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort=Automatisch zoeken van poort
 #orig#preferences.dialog.randomPort.tooltip={APPNAME} will try to bind to a random port.
-preferences.dialog.randomPort.tooltip=PowerFolder zoekt automatisch een willekeurige poort.
+preferences.dialog.randomPort.tooltip={APPNAME} zoekt automatisch een willekeurige poort.
 ##preferences.dialog.restart.restart=Restart Now
 ##preferences.dialog.restart.text=Some changes require {APPNAME} to restart.
 ##preferences.dialog.restart.title=Restart required
@@ -1365,7 +1365,7 @@ preferences.dialog.paused_throttle.tooltip=Zet het bandbreedte gebruik percentag
 ##preferences.dialog.start_with_macosx.key=S
 ##preferences.dialog.start_with_macosx.name=Start {APPNAME} on Mac logon
 #orig#preferences.dialog.start_with_windows=Start {APPNAME} with Windows
-preferences.dialog.start_with_windows=Start PowerFolder met Windows
+preferences.dialog.start_with_windows=Start {APPNAME} met Windows
 #orig#preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusValidFailed=DynDns {0}\: controle mislukt\!
 #orig#preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
@@ -1895,7 +1895,7 @@ transfers.to=Naar
 ##web.core.start_via_webstart=Start via Java WebStart (Mac, Linux) instead
 
 #orig#winutils.shortcut.description=This shortcut was placed here by {APPNAME}
-winutils.shortcut.description=Deze snelkoppeling werd geplaatst door PowerFolder
+winutils.shortcut.description=Deze snelkoppeling werd geplaatst door {APPNAME}
 
 ##wizard.basic_setup.computer_name=Name of this computer
 ##wizard.basic_setup.default_folder_name=Sync Folder
