--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1983,7 +1983,7 @@ preferences.dialog.network_mode.name=Verbindungen
 ##preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to invitees, LAN computers and people who are in joined folders.<BR>{APPNAME} also connects to supernodes to find your invitees via the Internet.</BODY></HTML>
 ##preferences.dialog.network_mode.server_only.tooltip=<HTML><BODY>Enables file transfers over Internet only.</BODY></HTML>
 #orig#preferences.dialog.nickname=Nickname
-preferences.dialog.nickname=Benutzername
+preferences.dialog.nickname=Computername
 #orig#preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.non_windows_info=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
 #orig#preferences.dialog.online_storage.text=Use cloud space
